<resources>
    <string name="app_name">UniHelp Pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyBQhfNVn87umk8xpYnlbIqduKIPuZTLGbg</string>
    <string name="title_activity_login_demo">Sign in</string>
    <string name="seleccionar_foto">Seleccionar foto</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="sin_opcion">Sin Opción</string>
    <string name="MainActivityClassName">pe.edu.utp.unihelppro.activities.MainActivity</string>
    <string name="LoginActivityClassName">pe.edu.utp.unihelppro.activities.LoginActivity</string>
    <string name="EstadisticasActivityClassName">pe.edu.utp.unihelppro.activities.EstadisticasActivity</string>
    <string name="title_activity_crear_solicitud">CrearSolicitudActivity</string>


    <string name="client_Id">a1452f64-3e43-427d-a49e-d40e4fca6dcc</string>
    <string name="msalPrefix">msala1452f64-3e43-427d-a49e-d40e4fca6dcc</string>
    <string name="defaultImageFileName">test.jpg</string>
    <string name="connect_toast_text_error">Error connecting to Microsoft Graph\nCheck logcat for details</string>
    <string name="warning_client_id_redirect_uri_incorrect">The client ID or redirect URI is not valid. Enter a valid client ID and redirect URI in the Constants.java file and run again</string>
    <string name="login_with_outlook">Inicia Sesión con \ntu correo institucional</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incidentes">Incidentes</string>
    <string name="anadir_incidente">Añadir incidente</string>
    <string name="preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="personal_reportado">Personal reportado</string>
    <string name="usuarios_reportado">Usuarios reportado</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="title_activity_solicitudes">SolicitudesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="mis_incidentes">Mis incidentes</string>
    <string name="incidentes_publicos">Incidentes públicos</string>
    <string name="sede">Sede</string>
    <string name="pabell_n">Pabellón</string>
    <string name="aula">Aula</string>
    <string name="categor_a">Categoría</string>
    <string name="adjuntar_audio">Adjuntar Audio</string>
    <string name="descripci_n">Descripción</string>
    <string name="p_blico">Público</string>
    <string name="nombre_del_personal">Nombre del personal</string>
    <string name="registrar">Registrar</string>
    <string name="adjuntar_foto">Adjuntar Foto</string>
    <string name="imagen_no_disponible">Imagen no disponible</string>
    <string name="asignar_incidente">Asignar Incidente</string>
    <string name="seleccionar_categoria">Seleccionar categoria:</string>
    <string name="seleccionar_encargado">Seleccionar Encargado:</string>
    <string name="enviar">Enviar</string>
    <string name="calificar_incidente">Calificar Incidente</string>
    <string name="seleccione_una_puntuacion">Seleccione una puntuacion:</string>
    <string name="dejanos_un_comentario">Dejanos un comentario:</string>
    <string name="reportar_incidente">Reportar Incidente</string>
    <string name="detalla_el_motivo">Detalla el motivo:</string>
    <string name="exampleNombre">Nicanor David Quispe Cuadros</string>
    <string name="imagen_incidente">Imagen Incidente</string>
    <string name="exampleTexto">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="exampleFecha">16 de Enero a las 5:25pm</string>
    <string name="me_gustas">20 me gustas</string>
    <string name="comentarios">10 comentarios</string>
    <string name="comentar">Comentar</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="title_activity_estadisticas">EstadisticasActivity</string>
    <string name="reportes">Reportes</string>
    <string name="comentario">Comentario</string>
    <string name="escribe_comentario">Escribe un comentario</string>
    <string name="action_editar">Editar Incidente</string>
    <string name="ingresar_texto">Debes ingresar una descripción</string>
    <string name="error_seleccionar_calificacion">Debes seleccionar una calificación</string>
    <string name="reportando_incidente">Reportando incidente</string>
    <string name="calificando_incidente">Calificando incidente</string>
    <string name="registrando_incidente">Registrando incidente</string>
    <string name="me_gusta">Me gusta</string>
    <string name="agergando_megusta">Agregando me gusta</string>


    <string-array name="categoriaList">
        <item>Seleccione</item>
        <item>Limpieza</item>
        <item>Aula y Laboratorio</item>
        <item>Seguridad</item>
    </string-array>
    <string-array name="aulaList">
        <item>101</item>
        <item>102</item>
        <item>103</item>
        <item>104</item>
        <item>105</item>
    </string-array>
    <string-array name="sedeList">
        <item>Seleccione</item>
        <item>Lima Centro</item>
        <item>San Juan de Lurigancho</item>
        <item>Lima Norte</item>
        <item>Chiclayo</item>
    </string-array>
    <string-array name="pabellonList">
        <item>Seleccione</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>
</resources>
