<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_incidentes"
            android:title="@string/incidentes" />
        <item
            android:id="@+id/nav_anadir_incidente"
            android:title="@string/anadir_incidente" />
        <item
            android:id="@+id/nav_preguntas_frecuentes"
            android:title="@string/preguntas_frecuentes" />
        <item
            android:id="@+id/nav_usuarios_reportado"
            android:title="@string/usuarios_reportado" />
        <item
            android:id="@+id/nav_personal_reportado"
            android:title="@string/personal_reportado" />
        <item
            android:id="@+id/nav_estadisticas"
            android:title="@string/estadisticas" />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:title="@string/cerrar_sesion" />
    </group>

</menu>
