<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBGListItem"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/header_incidente"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:id="@+id/incidenteNombreUsuario"
                android:text="@string/exampleNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/incidenteFecha"
                android:text="@string/exampleFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/body_incidente"
            android:paddingTop="@dimen/activity_vertical_middle_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:gravity="start|top"
                android:id="@+id/incidenteContenido"
                android:text="@string/exampleTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <ImageView
                android:adjustViewBounds="true"
                android:id="@+id/incidenteImagen"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:src="@drawable/ic_photo_camera_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen_incidente" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/footer_incidente"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/incidenteMeGustas"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/me_gustas"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/incidenteComentarios"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/comentarios"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <Button
                    android:clickable="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    style="?android:attr/buttonBarStyle"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_gravity="center"
                    android:id="@+id/btnMeGusta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_favorite_black"
                    android:text="@string/me_gustas"
                    android:focusable="true" />
                <Button
                    style="?android:attr/buttonBarStyle"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_gravity="center"
                    android:id="@+id/btnComentar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_mode_comment_black"
                    android:text="@string/comentar" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
