<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CrearSolicitudFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/sede"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:spinnerMode="dropdown"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:id="@+id/inputSede"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/pabell_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:spinnerMode="dropdown"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:id="@+id/inputPabellon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/aula"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:spinnerMode="dropdown"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:id="@+id/inputAula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/categor_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:spinnerMode="dropdown"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:id="@+id/inputCategoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/btnFoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_insert_photo_black_24dp"
                    android:text="Adjuntar Foto"
                    android:layout_weight="1dp"/>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="200dp"
                    android:src="@drawable/img_base"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnAudio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_mic_black_24dp"
                    android:text="Adjuntar audio"
                    android:layout_weight="1dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/descripci_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:minLines="6"
                    android:gravity="top|left"
                    android:maxLines="10"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:scrollbars="vertical"
                    android:singleLine="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/p_blico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/nombre_del_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/inputRegistrar"
                    android:text="@string/registrar"
                    android:drawableEnd="@drawable/ic_send_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>